--- a/ms-sales/src/main/resources/application.properties
+++ b/ms-sales/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ms-sales
+spring.jpa.hibernate.ddl-auto=update
+#sql settings
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.driver.class=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#  logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %5level{36} - %msg%n
+logging.level.org.hibernate.SQL=DEBUG
+server.port=8083
