--- a/ms-sales/src/main/resources/application.properties
+++ b/ms-sales/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=ms-sales
 spring.jpa.hibernate.ddl-auto=update
+#domains
+client.api.url=http://localhost:8080/clients/
+product.api.url=http://localhost:8081/products/
+
 #sql settings
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
