se agrego springcloud y se modifico las properties

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=ms-sales
 spring.jpa.hibernate.ddl-auto=update
 
-#sql settings
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.driver.class=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.config.import=optional:configserver:http://localhost:8085
 #  logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %5level{36} - %msg%n
 logging.level.org.hibernate.SQL=DEBUG
