Add new dependencies and improve configuration

--- a/sale-app/src/main/resources/application.properties
+++ b/sale-app/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=ms-sales
 spring.jpa.hibernate.ddl-auto=update
 
-spring.config.import=optional:configserver:http://localhost:8085
-#  logging
+# config server
+spring.config.import=${SPRING_CONFIG_IMPORT}
+spring.cloud.config.profile=${SPRING_PROFILE_ACTIVE}
+
+ # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %5level{36} - %msg%n
 logging.level.org.hibernate.SQL=DEBUG
 server.port=8080
